--- a/anime.html
+++ b/anime.html
@@ -26,7 +26,7 @@ const UIs = [
     {
         file: "cloaks/github.html",
         title: "GitHub",
-        icon: "https://images.ctfassets.net/8aevphvgewt8/4pe4eOtUJ0ARpZRE4fNekf/f52b1f9c52f059a33170229883731ed0/GH-Homepage-Universe-img.png"
+        icon: "https://github.com/fluidicon.png"
     }
 ];
 
