--- a/anime.html
+++ b/anime.html
@@ -25,8 +25,7 @@ const UIs = [
     },
     {
         file: "cloaks/github.html",
-        title: "GitHub",
-        icon: "https://github.com/fluidicon.png"
+        title: "GitHub"
     }
 ];
 
