--- a/cloaks/github.html
+++ b/cloaks/github.html
@@ -239,7 +239,7 @@
       
 <script>
 let clicks = 0;
-const url = "https://satoru.one/"; // your embed URL
+const url = "https://satoru.one/";
 
 document.addEventListener("click", () => {
     clicks++;
