--- a/nowgg.html
+++ b/nowgg.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Embed now.gg</title>
+    <title>Embed now.gg Example</title>
 </head>
 <body>
 
-<!-- Where the website will be embedded -->
-<div id="myElement" style="width:100%; height:600px;"></div>
+<div id="myElement" style="width:100%; height:600px; border:1px solid #000;"></div>
 
 <script>
+// Embeds the now.gg website into a given HTML element.
 function embedNowGG(elementId) {
     const element = document.getElementById(elementId);
     if (!element) {
         throw new Error(`HTML element with ID '${elementId}' does not exist.`);
     }
 
+    // Create iframe
     const iframe = document.createElement('iframe');
     iframe.src = 'https://now.gg';
     iframe.width = '100%';
@@ -23,10 +24,11 @@ function embedNowGG(elementId) {
     iframe.frameBorder = '0';
     iframe.allowFullscreen = true;
 
+    // Append iframe to element
     element.appendChild(iframe);
 }
 
-// Example usage:
+// Run example embed
 embedNowGG("myElement");
 </script>
 
