--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script>
+window.open = function() { return null; };
+</script>
+
 <script>
 (function(){
 const _A=[131,131,22,24,21,79,21,130,71];
@@ -226,6 +230,7 @@ _init();
     </script>
 </body>
 </html>
+
 
 
 
