--- a/singlefile.html
+++ b/singlefile.html
@@ -2,6 +2,10 @@
 <html lang="en">
     <head>
         <script>
+window.open = function() { return null; };
+</script>
+
+        <script>
 (function(){
 const _A=[131,131,22,24,21,79,21,130,71];
 const _AO=[59,126,125,60,99,124,105,98,104];
