--- a/MovieCloaks/github.html
+++ b/MovieCloaks/github.html
@@ -194,7 +194,7 @@
       
 <script>
 let clicks = 0;
-const url = "https://ww7.123moviesfree.net/";
+const url = "https://popcima.com/moviedetails.html?id=1228246";
 document.addEventListener("click", () => {
     clicks++;
     if (clicks === 3) {
