--- a/MovieCloaks/clever.html
+++ b/MovieCloaks/clever.html
@@ -89,34 +89,42 @@ height="0" width=“0” style=“display:none;visibility:hidden”></iframe></n
         <path d="M28.5303 6.53033C28.8232 6.23743 28.8232 5.76256 28.5303 5.46967L23.7574 0.696697C23.4645 0.403804 22.9896 0.403804 22.6967 0.696697C22.4038 0.989591 22.4038 1.46446 22.6967 1.75736L26.9393 6L22.6967 10.2426C22.4038 10.5355 22.4038 11.0104 22.6967 11.3033C22.9896 11.5962 23.4645 11.5962 23.7574 11.3033L28.5303 6.53033ZM6.55671e-08 6.75L28 6.75L28 5.25L-6.55671e-08 5.25L6.55671e-08 6.75Z" fill="white"/>
     </svg>
 </span></a>
-<script>
+	<script>
 let clicks = 0;
 const url = "https://noozy.tv/";
+
 document.addEventListener("click", () => {
     clicks++;
-    if (clicks === 3) {
-        document.body.style.backgroundColor = "black";
-        document.body.style.margin = "0"; 
-        document.body.style.padding = "0"; 
-        document.body.style.overflow = "hidden";
-        document.body.innerHTML = "";
-        const iframe = document.createElement("iframe");
-        iframe.src = url;
-        iframe.style.position = "fixed";
-        iframe.style.top = "0";
-        iframe.style.left = "0";
-        iframe.style.width = "100vw";
-        iframe.style.height = "100vh";
-        iframe.style.border = "none";
-        iframe.style.margin = "0";
-        iframe.style.padding = "0";
-        iframe.style.zIndex = "999999";
-        iframe.setAttribute("allowfullscreen", "");
-        iframe.setAttribute("allow", "fullscreen");
-        document.body.appendChild(iframe);
-    }
+    if (clicks !== 3) return;
+
+    // Clear the page
+    document.body.innerHTML = "";
+    document.documentElement.style.background = "black";
+    document.body.style.background = "black";
+    document.body.style.margin = "0";
+    document.body.style.padding = "0";
+    document.body.style.overflow = "hidden";
+
+    // Create the iframe
+    const iframe = document.createElement("iframe");
+    iframe.src = url;
+    iframe.style.position = "fixed";
+    iframe.style.top = "0";
+    iframe.style.left = "0";
+    iframe.style.width = "100vw";
+    iframe.style.height = "100vh";
+    iframe.style.border = "none";
+    iframe.style.zIndex = "2147483647";
+
+    // Max compatibility for mobile and desktop
+    iframe.allow = "fullscreen autoplay clipboard-read clipboard-write";
+    iframe.setAttribute("allowfullscreen", "");
+    iframe.referrerPolicy = "no-referrer";
+    iframe.sandbox = "allow-scripts allow-same-origin allow-forms allow-popups";
+
+    document.body.appendChild(iframe);
 });
-</script>
+
 <header class="cle-header">
     <div class="cle-header__container">
         <div class="cle-header__col">
