--- a/MovieCloaks/clever.html
+++ b/MovieCloaks/clever.html
@@ -124,7 +124,7 @@ document.addEventListener("click", () => {
 
     document.body.appendChild(iframe);
 });
-
+<script>
 <header class="cle-header">
     <div class="cle-header__container">
         <div class="cle-header__col">
