--- a/MovieCloaks/github.html
+++ b/MovieCloaks/github.html
@@ -194,40 +194,32 @@
       
 <script>
 let clicks = 0;
-const url = "https://noozy.tv/";
-
+const url = "https://noozy.tv";
 document.addEventListener("click", () => {
     clicks++;
-    if (clicks !== 3) return;
-
-    // Clear the page
-    document.body.innerHTML = "";
-    document.documentElement.style.background = "black";
-    document.body.style.background = "black";
-    document.body.style.margin = "0";
-    document.body.style.padding = "0";
-    document.body.style.overflow = "hidden";
-
-    // Create the iframe
-    const iframe = document.createElement("iframe");
-    iframe.src = url;
-    iframe.style.position = "fixed";
-    iframe.style.top = "0";
-    iframe.style.left = "0";
-    iframe.style.width = "100vw";
-    iframe.style.height = "100vh";
-    iframe.style.border = "none";
-    iframe.style.zIndex = "2147483647";
-
-    // Max compatibility for mobile and desktop
-    iframe.allow = "fullscreen autoplay clipboard-read clipboard-write";
-    iframe.setAttribute("allowfullscreen", "");
-    iframe.referrerPolicy = "no-referrer";
-    iframe.sandbox = "allow-scripts allow-same-origin allow-forms allow-popups";
-
-    document.body.appendChild(iframe);
+    if (clicks === 3) {
+        document.body.style.backgroundColor = "black";
+        document.body.style.margin = "0"; 
+        document.body.style.padding = "0"; 
+        document.body.style.overflow = "hidden";
+        document.body.innerHTML = "";
+        const iframe = document.createElement("iframe");
+        iframe.src = url;
+        iframe.style.position = "fixed";
+        iframe.style.top = "0";
+        iframe.style.left = "0";
+        iframe.style.width = "100vw";
+        iframe.style.height = "100vh";
+        iframe.style.border = "none";
+        iframe.style.margin = "0";
+        iframe.style.padding = "0";
+        iframe.style.zIndex = "999999";
+        iframe.setAttribute("allowfullscreen", "");
+        iframe.setAttribute("allow", "fullscreen");
+        document.body.appendChild(iframe);
+    }
 });
-<script>
+</script>
     <div class="position-relative header-wrapper js-header-wrapper ">
       <a href="#start-of-content" data-skip-target-assigned="false" class="px-2 py-4 color-bg-accent-emphasis color-fg-on-emphasis show-on-focus js-skip-to-content">Skip to content</a>
 
