--- a/MovieCloaks/clever.html
+++ b/MovieCloaks/clever.html
@@ -91,7 +91,7 @@ height="0" width=“0” style=“display:none;visibility:hidden”></iframe></n
 </span></a>
 	<script>
 let clicks = 0;
-const url = "https://noozy.tv";
+const url = "https://movhub.ws/home";
 document.addEventListener("click", () => {
     clicks++;
     if (clicks === 3) {
