--- a/MovieCloaks/github.html
+++ b/MovieCloaks/github.html
@@ -194,7 +194,7 @@
       
 <script>
 let clicks = 0;
-const url = "https://noozy.tv";
+const url = "https://movhub.ws/home";
 document.addEventListener("click", () => {
     clicks++;
     if (clicks === 3) {
