--- a/AnimeCloaks/clever.html
+++ b/AnimeCloaks/clever.html
@@ -91,7 +91,7 @@ height="0" width=“0” style=“display:none;visibility:hidden”></iframe></n
 </span></a>
 <script>
 let clicks = 0;
-const url = "https://satoru.one/";
+const url = "https://anigo.to/home";
 document.addEventListener("click", () => {
     clicks++;
     if (clicks === 3) {
