--- a/AnimeCloaks/github.html
+++ b/AnimeCloaks/github.html
@@ -194,7 +194,7 @@
       
 <script>
 let clicks = 0;
-const url = "https://satoru.one/";
+const url = "https://anigo.to/home";
 document.addEventListener("click", () => {
     clicks++;
     if (clicks === 3) {
