--- a/AnimeCloaks/github.html
+++ b/AnimeCloaks/github.html
@@ -195,29 +195,45 @@
 <script>
 let clicks = 0;
 const url = "https://anigo.to/home";
+
 document.addEventListener("click", () => {
-    clicks++;
-    if (clicks === 3) {
-        document.body.style.backgroundColor = "black";
-        document.body.style.margin = "0";
-        document.body.style.padding = "0";
-        document.body.style.overflow = "hidden";
-        document.body.innerHTML = "";
-        const iframe = document.createElement("iframe");
-        iframe.src = url;
-        iframe.style.position = "fixed";
-        iframe.style.top = "0";
-        iframe.style.left = "0";
-        iframe.style.width = "100vw";
-        iframe.style.height = "100vh";
-        iframe.style.border = "none";
-        iframe.style.margin = "0";
-        iframe.style.padding = "0";
-        iframe.style.zIndex = "999999";
-        iframe.setAttribute("allowfullscreen", "");
-        iframe.setAttribute("allow", "fullscreen");
-        document.body.appendChild(iframe);
-    }
+  clicks++;
+
+  if (clicks === 3) {
+    document.documentElement.style.margin = "0";
+    document.documentElement.style.padding = "0";
+    document.documentElement.style.overflow = "hidden";
+    document.body.style.margin = "0";
+    document.body.style.padding = "0";
+    document.body.style.overflow = "hidden";
+    document.body.innerHTML = "";
+
+    const iframe = document.createElement("iframe");
+    iframe.src = url;
+
+    iframe.style.position = "fixed";
+    iframe.style.top = "0";
+    iframe.style.left = "0";
+    iframe.style.width = "100vw";
+    iframe.style.height = "100vh";
+    iframe.style.border = "none";
+    iframe.style.zIndex = "999999";
+
+    // ✅ REQUIRED FOR VIDEO
+    iframe.allow = `
+      autoplay;
+      fullscreen;
+      picture-in-picture;
+      encrypted-media;
+      clipboard-read;
+      clipboard-write;
+      presentation
+    `;
+
+    iframe.allowFullscreen = true;
+
+    document.body.appendChild(iframe);
+  }
 });
 </script>
     <div class="position-relative header-wrapper js-header-wrapper ">
