--- a/index.html
+++ b/index.html
@@ -136,15 +136,15 @@ _init();
    <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>X3n0nN3tw0rk</title>
-<meta name="title" content="X3n0nN3tw0rk">
+<meta name="title" content="Xen0nkidd">
 <meta name="description" content="Fun games from Steam, Indie, Game Jolt, Flash Player, Etc">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://x3n0nn3tw0rk.github.io/">
-<meta property="og:title" content="X3n0nN3tw0rk">
+<meta property="og:url" content="https://Xen0nkidd.github.io/">
+<meta property="og:title" content="Xen0nkidd">
 <meta property="og:description" content="Fun games from Steam, Indie, Game Jolt, Flash Player, Etc">
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://x3n0nn3tw0rk.github.io/">
-<meta name="twitter:title" content="X3n0nN3tw0rk">
+<meta name="twitter:url" content="https://Xen0nkidd.github.io/">
+<meta name="twitter:title" content="Xen0nkidd">
 <meta name="twitter:description" content="Fun games from Steam, Indie, Game Jolt, Flash Player, Etc">
 <link rel="stylesheet" href="style.css">
 </head>
@@ -153,7 +153,7 @@ _init();
         <div class="header-content">
             <div class="logo">
                 <img src="favicon.png" alt="favicon" class="logo-favicon" id="logoClick">
-                X3n0nN3tw0rk
+                Xen0nkidd
             </div>
             <div class="search-container">
                 <input type="text" id="searchBar" placeholder="Search zones..." oninput="filterZones()">
@@ -230,6 +230,7 @@ _init();
     </script>
 </body>
 </html>
+
 
 
 
