--- a/test.html
+++ b/test.html
@@ -105,16 +105,16 @@ _init();
 
  <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>X3n0nN3tw0rk</title>
-<meta name="title" content="X3n0nN3tw0rk">
+<title>Xen0nkidd</title>
+<meta name="title" content="Xen0nkidd">
 <meta name="description" content="Fun games from Steam, Indie, Game Jolt, Flash Player, Etc">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://x3n0nn3tw0rk.github.io/">
-<meta property="og:title" content="X3n0nN3tw0rk">
+<meta property="og:url" content="https://Xen0nkidd.github.io/">
+<meta property="og:title" content="Xen0nkidd">
 <meta property="og:description" content="Fun games from Steam, Indie, Game Jolt, Flash Player, Etc">
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://x3n0nn3tw0rk.github.io/">
-<meta name="twitter:title" content="X3n0nN3tw0rk">
+<meta name="twitter:url" content="https://Xen0nkidd.github.io/">
+<meta name="twitter:title" content="Xen0nkidd">
 <meta name="twitter:description" content="Fun games from Steam, Indie, Game Jolt, Flash Player, Etc">
 <link rel="stylesheet" href="style.css">
     <style>
