--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ _init();
     <script src="https://cdn.jsdelivr.net/gh/gn-math/gn-math.github.io@main/gnmath.js"></script>
    <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>X3n0nN3tw0rk</title>
+<title>Xen0nkidd</title>
 <meta name="title" content="Xen0nkidd">
 <meta name="description" content="Fun games from Steam, Indie, Game Jolt, Flash Player, Etc">
 <meta property="og:type" content="website">
@@ -230,6 +230,7 @@ _init();
     </script>
 </body>
 </html>
+
 
 
 
