--- a/jjk.html
+++ b/jjk.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Custom Buttons</title>
+<title>Jjk Season 3 Eps</title>
 
 <style>
 .modal {
@@ -37,7 +37,7 @@
 
 <div class="modal">
   <div class="modal-content">
-    <h2>Select Episode</h2>
+    <h2>Select JJK Season 3 Episode</h2>
 
     <button onclick="go('https://xen0nkidd.github.io/JjkEps/Ep1.html')">
       Episode 1
