--- a/jjk.html
+++ b/jjk.html
@@ -37,7 +37,8 @@
 
 <div class="modal">
   <div class="modal-content">
-    <h2>Select JJK Season 3 Episode \n (New Episodes Will Be Added When Released)</h2>
+    <h2>Select JJK Season 3 Episode 
+      (New Episodes Will Be Added When Released)</h2>
 
     <button onclick="go('https://xen0nkidd.github.io/JjkEps/Ep1.html')">
       Episode 1
