--- a/jjk.html
+++ b/jjk.html
@@ -8,14 +8,14 @@
 .modal {
   position: fixed;
   inset: 0;
-  background: rgba(70, 21, 172, 0.8)
+  background: rgba(0,0,0,0.7);
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .modal-content {
-  background: grey;
+  background: white;
   padding: 25px;
   border-radius: 8px;
   text-align: center;
