--- a/test.html
+++ b/test.html
@@ -310,6 +310,20 @@ header {
     transform: translateY(-1px);
     box-shadow: var(--shadow);
 }
+.search-container select {
+    background-color: var(--secondary-bg);
+    color: var(--text-color);
+    border: 1px solid var(--border-color);
+    border-radius: 4px;
+    padding: 0.5rem;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.search-container select:focus {
+    outline: none;
+    border-color: var(--primary-color);
+}
 
 main {
     margin: 0 auto;
