--- a/test.html
+++ b/test.html
@@ -282,6 +282,27 @@ header {
     box-shadow: var(--shadow);
     color: var(--glass);
 }
+#quickLinks {
+    padding: 0.875rem 1rem;
+    border: 0;
+    border-radius: var(--radius);
+    background: var(--glass);
+    backdrop-filter: blur(20px);
+    color: var(--text-muted);
+    font-size: 15px;
+    cursor: pointer;
+    outline: none;
+    transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+    min-width: 150px;
+    box-shadow: var(--shadow-sm);
+}
+
+#quickLinks:hover {
+    background: var(--text);
+    transform: translateY(-1px);
+    box-shadow: var(--shadow);
+    color: var(--glass);
+}
 
 .control-buttons {
     display: flex;
