--- a/ai.html
+++ b/ai.html
@@ -1,23 +1,35 @@
-<script>
-document.body.style.backgroundColor = "black";
-document.body.style.margin = "0";
-document.body.style.padding = "0";
-document.body.style.overflow = "hidden";
-document.body.innerHTML = "";
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Embedded Chat</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            background: black;
+        }
+        iframe {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            border: none;
+        }
+    </style>
+</head>
+<body>
 
-const iframe = document.createElement("iframe");
-iframe.src = "https://www.easemate.ai/webapp/chat?from=ai-chat";
-iframe.style.position = "fixed";
-iframe.style.top = "0";
-iframe.style.left = "0";
-iframe.style.width = "100vw";
-iframe.style.height = "100vh";
-iframe.style.border = "none";
-iframe.style.margin = "0";
-iframe.style.padding = "0";
-iframe.style.zIndex = "999999";
-iframe.setAttribute("allowfullscreen", "");
-iframe.setAttribute("allow", "fullscreen");
+    <iframe
+        src="https://www.easemate.ai/webapp/chat?from=ai-chat"
+        allowfullscreen
+        allow="fullscreen">
+    </iframe>
 
-document.body.appendChild(iframe);
-</script>
+</body>
+</html>
