--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ _init();
                 <select id="quickLinks" onchange="handleQuickLink(this)">
                     <option value="">Quick Links</option>
                     <option value="https://xen0nkidd.github.io/jjk.html">JJK Episodes</option>
-                    <option value="https://xen0nkidd.github.io/chatgpt.html">Chatgpt</option>
+                    <option value="https://xen0nkidd.github.io/ai.html">Chatgpt</option>
                 </select>
             </div>
 
@@ -248,6 +248,7 @@ _init();
     </script>
 </body>
 </html>
+
 
 
 
