--- a/singlefile.html
+++ b/singlefile.html
@@ -756,7 +756,7 @@ footer {
                 <select id="quickLinks" onchange="handleQuickLink(this)">
                     <option value="">Quick Links</option>
                     <option value="https://xen0nkidd.github.io/jjk.html">JJK Episodes</option>
-                    <option value="https://xen0nkidd.github.io/chatgpt.html">GitHub</option>
+                    <option value="https://xen0nkidd.github.io/ai.html">GitHub</option>
                 </select>
             </div>
 
