--- a/ai.html
+++ b/ai.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Embedded Chat</title>
+    <title>AI Bot</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         html, body {
