--- a/index.html
+++ b/index.html
@@ -147,7 +147,10 @@ _init();
 <meta name="twitter:title" content="Xen0nkidd">
 <meta name="twitter:description" content="Fun games from Steam, Indie, Game Jolt, Flash Player, Etc">
 <link rel="stylesheet" href="style.css">
+  <script src="mouse-lock.js"></script>
+
 </head>
+  
 <body class="dark-mode">
   
     <header>
@@ -250,6 +253,7 @@ _init();
     </script>
 </body>
 </html>
+
 
 
 
