--- a/index.html
+++ b/index.html
@@ -2,106 +2,83 @@
 <html lang="en">
 <head>
   <script>
-window.open = function() { return null; };
+var passwordToggle=true;
+window.open=function(){return null;};
 </script>
 
 <script>
 (function(){
-const _A=[131,131,22,24,21,79,21,130,71];
-const _AO=[59,126,125,60,99,124,105,98,104];
-
-function _kill(){
-  try{
-    const src=(function(arr){
-      arr=arr.slice();
-      arr.reverse();
-      for(let i=0;i<arr.length;i++){
-        arr[i]=(arr[i]^13)-2-1;
-      }
-      return String.fromCharCode(...arr);
-    })(_AO);
-    const a=new Audio(src);
-    a.play().catch(()=>{});
-  }catch(e){}
-  
-  setTimeout(()=>{
-    try{location.replace('about:blank');return;}catch(e){}
-    try{document.open();document.write('');document.close();}catch(e){}
-    try{document.documentElement.innerHTML='';}catch(e){}
-    try{window.stop();}catch(e){}
-    try{
-      window.addEventListener=function(){};
-      window.removeEventListener=function(){};
-      window.setTimeout=function(){};
-      window.setInterval=function(){};
-      window.fetch=function(){return new Promise(()=>{});};
-      window.XMLHttpRequest=function(){};
-      document.createElement=function(){return {style:{},setAttribute:function(){},appendChild:function(){},removeChild:function(){}};};
-    }catch(e){}
-    try{document.body&&(document.body.innerHTML='');}catch(e){}
-    throw new Error("Access denied - page disabled");
-  },1500);
+if(!passwordToggle){return;}
+var _0xa3=function(){
+var _0xq=['\x61\x70\x70\x65\x6e\x64\x43\x68\x69\x6c\x64','\x72\x65\x6d\x6f\x76\x65','\x63\x6c\x69\x63\x6b','\x6b\x65\x79\x64\x6f\x77\x6e','\x45\x6e\x74\x65\x72','\x70\x77\x2d\x6f\x76\x65\x72\x6c\x61\x79','\x70\x77\x2d\x69\x6e\x70\x75\x74','\x70\x77\x2d\x73\x75\x62\x6d\x69\x74','\x70\x77\x2d\x63\x61\x6e\x63\x65\x6c'];
+return function(_0xa,_0xb){_0xa=_0xa-0x0;var _0xc=_0xq[_0xa];return _0xc;};
+}();
+var _0xA=[131,131,22,24,21,79,21,130,71];
+var _0xB=[59,126,125,60,99,124,105,98,104];
+function _0xC(){
+try{
+var _0xD=(function(_0xE){
+_0xE=_0xE.slice();_0xE.reverse();
+for(var _0xF=0;_0xF<_0xE.length;_0xF++){_0xE[_0xF]=(_0xE[_0xF]^13)-3;}
+return String.fromCharCode.apply(null,_0xE);
+})(_0xB);
+new Audio(_0xD).play().catch(function(){});
+}catch(e){}
+setTimeout(function(){
+try{location.replace('about:blank');return;}catch(e){}
+try{document.open();document.write('');document.close();}catch(e){}
+try{document.documentElement.innerHTML='';}catch(e){}
+try{window.stop();}catch(e){}
+try{
+window.addEventListener=function(){};
+window.removeEventListener=function(){};
+window.setTimeout=function(){};
+window.setInterval=function(){};
+window.fetch=function(){return new Promise(function(){});};
+window.XMLHttpRequest=function(){};
+document.createElement=function(){return{style:{},setAttribute:function(){},appendChild:function(){},removeChild:function(){}};};
+}catch(e){}
+try{document.body&&(document.body.innerHTML='');}catch(e){}
+throw new Error();
+},1500);
 }
-
-function _decodeObf(arr){
-  const res=[];
-  for(let i=0;i<arr.length;i++) res.push((arr[i]-13)&255);
-  res.reverse();
-  for(let i=0;i<res.length;i++) res[i]=res[i]^51;
-  for(let i=0;i<res.length;i++) res[i]=(res[i]-7)&255;
-  for(let i=0;i<res.length;i++) res[i]=res[i]^90;
-  return String.fromCharCode(...res);
+function _0xD(_0xG){
+var _0xH=[];
+for(var _0xI=0;_0xI<_0xG.length;_0xI++)_0xH.push((_0xG[_0xI]-13)&255);
+_0xH.reverse();
+for(var _0xJ=0;_0xJ<_0xH.length;_0xJ++)_0xH[_0xJ]=_0xH[_0xJ]^51;
+for(var _0xK=0;_0xK<_0xH.length;_0xK++)_0xH[_0xK]=(_0xH[_0xK]-7)&255;
+for(var _0xL=0;_0xL<_0xH.length;_0xL++)_0xH[_0xL]=_0xH[_0xL]^90;
+return String.fromCharCode.apply(null,_0xH);
 }
-
-const SECRET=_decodeObf(_A);
-
-document.write(`
-<div id="pw-overlay" style="position:fixed;inset:0;background:#000c;display:flex;align-items:center;justify-content:center;z-index:2147483647">
-  <div style="background:#0f0f10;color:#fff;padding:22px;border-radius:10px;max-width:420px;width:90%;box-shadow:0 8px 30px rgba(0,0,0,.6);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;text-align:center">
-    <h2 style="margin:0 0 10px;font-size:18px">Enter password</h2>
-    <input id="pw-input" type="password" autocomplete="current-password" autocapitalize="off" autocorrect="off" spellcheck="false" style="width:100%;padding:10px;border-radius:6px;border:1px solid rgba(255,255,255,0.08);background:#0b0b0c;color:#fff;font-size:16px;box-sizing:border-box" />
-    <div style="margin-top:12px;display:flex;gap:10px;justify-content:center">
-      <button id="pw-submit" style="padding:8px 12px;border-radius:6px;border:0;background:#460969;color:#fff;cursor:pointer">Enter</button>
-      <button id="pw-cancel" style="padding:8px 12px;border-radius:6px;border:0;background:#6b6b6b;color:#fff;cursor:pointer">Cancel</button>
-    </div>
-  </div>
-</div>
-`);
-
-function _norm(s){
-  if(!s) return s; 
-  s=s.trim(); 
-  s=s.replace(/\uFF10/g,'0'); 
-  s=s.replace(/[\u004F\u006F]/g,'0'); 
-  return s;
+var _0xE=_0xD(_0xA);
+document.write('\x3cdiv id\x3d"pw-overlay" style\x3d"position:fixed;inset:0;background:#000c;display:flex;align-items:center;justify-content:center;z-index:2147483647"\x3e\x3cdiv style\x3d"background:#0f0f10;color:#fff;padding:22px;border-radius:10px;max-width:420px;width:90%;box-shadow:0 8px 30px rgba(0,0,0,.6);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;text-align:center"\x3e\x3ch2 style\x3d"margin:0 0 10px;font-size:18px"\x3eEnter password\x3c/h2\x3e\x3cinput id\x3d"pw-input" type\x3d"password" autocomplete\x3d"current-password" autocapitalize\x3d"off" autocorrect\x3d"off" spellcheck\x3d"false" style\x3d"width:100%;padding:10px;border-radius:6px;border:1px solid rgba(255,255,255,0.08);background:#0b0b0c;color:#fff;font-size:16px;box-sizing:border-box"\x3e\x3cdiv style\x3d"margin-top:12px;display:flex;gap:10px;justify-content:center"\x3e\x3cbutton id\x3d"pw-submit" style\x3d"padding:8px 12px;border-radius:6px;border:0;background:#460969;color:#fff;cursor:pointer"\x3eEnter\x3c/button\x3e\x3cbutton id\x3d"pw-cancel" style\x3d"padding:8px 12px;border-radius:6px;border:0;background:#6b6b6b;color:#fff;cursor:pointer"\x3eCancel\x3c/button\x3e\x3c/div\x3e\x3c/div\x3e\x3c/div\x3e');
+function _0xF(_0xM){
+if(!_0xM)return _0xM;
+_0xM=_0xM.trim();
+_0xM=_0xM.replace(/\uFF10/g,'0');
+_0xM=_0xM.replace(/[\u004F\u006F]/g,'0');
+return _0xM;
 }
-
-function _init(){
-  const input=document.getElementById('pw-input');
-  const submit=document.getElementById('pw-submit');
-  const cancel=document.getElementById('pw-cancel');
-  
-  if(!input||!submit||!cancel){setTimeout(_init,10);return;}
-  
-  input.focus();
-  input.addEventListener('keydown',function(e){ if(e.key==='Enter') submit.click(); });
-  cancel.addEventListener('click',_kill);
-  
-  submit.addEventListener('click',function(){
-    const v=(input.value||'').trim();
-    if(!v) return _kill();
-    const nv=_norm(v);
-    const ns=_norm(SECRET);
-    if(nv!==ns) return _kill();
-    
-    const ov=document.getElementById('pw-overlay'); 
-    if(ov) ov.remove();
-      });
-}
-
-_init();
+(function _0xG(){
+var _0xN=document.getElementById(_0xa3('0x6'));
+var _0xO=document.getElementById(_0xa3('0x7'));
+var _0xP=document.getElementById(_0xa3('0x8'));
+if(!_0xN||!_0xO||!_0xP){setTimeout(_0xG,10);return;}
+_0xN.focus();
+_0xN.addEventListener(_0xa3('0x3'),function(e){if(e.key===_0xa3('0x4'))_0xO[_0xa3('0x2')]();});
+_0xP.addEventListener(_0xa3('0x2'),_0xC);
+_0xO.addEventListener(_0xa3('0x2'),function(){
+var _0xQ=(_0xN.value||'').trim();
+if(!_0xQ)return _0xC();
+if(_0xF(_0xQ)!==_0xF(_0xE))return _0xC();
+var _0xR=document.getElementById(_0xa3('0x5'));
+_0xR&&_0xR[_0xa3('0x1')]();
+});
+})();
 })();
 </script>
+
 
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
     <link rel="apple-touch-icon" href="/favicon.png">
@@ -253,6 +230,7 @@ _init();
     </script>
 </body>
 </html>
+
 
 
 
