--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <script>
-var passwordToggle=true;
+var passwordToggle=false;
 window.open=function(){return null;};
 </script>
 
@@ -230,6 +230,7 @@ _0xR&&_0xR[_0xa3('0x1')]();
     </script>
 </body>
 </html>
+
 
 
 
